# ai-agents-microservice

./: .coderabbit.yaml  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rebuild.sh  requirements-dev.txt  requirements.txt  sonar-project.properties  test-results.xml
.github/workflows/: protocol_tests.yml
config/: brigade_recommendations.yaml  llm_models.yaml  mcp.json.template
config/protocols/: ARCHITECTURE_RECONCILIATION.json  DEBATE_PROTOCOL.json  FIVE_LLM_DISCUSSION.json  PIPELINE_PROTOCOL.json  ROUNDTABLE_DISCUSSION.json  TROUBLESHOOTING_LOOP.json  WBS_GENERATION.json
config/workflows/: explore_decide_implement.yaml  review_reconcile.yaml
data/concept_validation/: FINAL_AGGREGATED_RESULTS.json  aggregated_final_results.json  claude_failed_terms.json  concept_validation_20251222_012143.json  concept_validation_20251222_022859.json  concept_validation_20251222_023133.json  deepseek_tiebreaker.json  dispute_resolution_20251222_121726.json  dispute_resolution_merged.json  dispute_retry_20251222_191538.json  disputed_terms_needing_resolution.json  disputed_terms_remaining.json  final_validated_concepts.json  gpt_noise_review.json  inter_ai_discussion_20251222_200737.json  inter_ai_discussion_20251222_201126.json  noise_audit.xlsx  noise_categorized.json  noise_false_positives.json  noise_filtered_for_review.json  noise_needs_llm_review.json  noise_review_consensus.json  partial_discussion_results_416.json  validated_concepts_20251222_012143.json  validated_concepts_20251222_022859.json  validated_concepts_20251222_023133.json  validated_concepts_FIXED.json
data/conversations/: a04d704d-ca8e-49fb-8ac8-47d22acedae8.json  a04d704d-ca8e-49fb-8ac8-47d22acedae8.txt  ca694089-1843-43b5-9f83-7ec3b4b4cc95.json  ca694089-1843-43b5-9f83-7ec3b4b4cc95.txt
data/textbook_analysis/: textbook_analysis_20251224_004109.json
docker/: docker-compose.e2e.yml  docker-compose.test.yml
docs/: ARCHITECTURE.md  CLIENT_PROLIFERATION_ROOT_CAUSE.md  CODE_UNDERSTANDING_ORCHESTRATOR_DESIGN.md  KITCHEN_BRIGADE_AGENT_GUIDE.md  MCP_FIX_SUMMARY.md  MCP_TOOL_LOCATIONS.md  PHASE_5_PRE_IMPLEMENTATION.md  PROTOCOL_TESTING.md  TECHNICAL_CHANGE_LOG.md  TIER_RELATIONSHIP_DIAGRAM.md  WBS.md  WBS_KITCHEN_BRIGADE.md  ai-platform-vscode-extension.code-workspace  openapi.yaml
docs/architecture/: AGENT_FUNCTIONS_ARCHITECTURE.md  ARCHITECTURE.md  INTER_AI_ORCHESTRATION.md  KITCHEN_BRIGADE_ARCHITECTURE.md
docs/archive/: ARCHITECTURE_ORIGINAL.md
docs/guides/: DEMO.md  GETTING_STARTED.md  MCP_SETUP.md  MODEL_LIBRARY.md
outputs/: code_understanding_design_20251208_114047.json  code_understanding_design_20251208_130032.json  code_understanding_design_20251208_132557.json
scripts/: code_quality_assessment.py  demo_kb7_pipeline.py  gemini_assessment.sh  gemini_review.py  kitchen_brigade_final_architecture.sh  kitchen_brigade_full_stack.py  kitchen_brigade_interview.sh  kitchen_brigade_loop.sh  kitchen_brigade_reassessment.py  kitchen_brigade_reconciliation.py  kitchen_brigade_resolution.sh  kitchen_brigade_stage2.sh  kitchen_brigade_stage2_enhanced.sh  multi_llm_assessment.py  poc_concept_validation.py  poc_concept_validation_batched.py  poc_deepseek_arbitration.py  poc_dispute_resolution.py  poc_dispute_retry_failed.py  poc_guideline_textbook_crossref.py  poc_inter_ai_discussion.py  poc_kitchen_brigade_orchestration.py  poc_textbook_cross_reference.py  roundtable_architecture_review.py  roundtable_consensus.json  roundtable_v2_with_context.py  skill_debate.py  stage1_decomposition.json  stage2_evidence.json  team_assessment.py  test_code_understanding_design.py  validate_graph_rag_poc.py  verify_platform_health.sh  verify_rollback.py
src/: __init__.py  infrastructure_config.py  main.py
src/a2a/: __init__.py  agent_card.py  events.py  models.py  task_store.py
src/agents/: __init__.py  base.py
src/api/: __init__.py  error_handlers.py
src/cache/: __init__.py  artifact.py  compression.py  handoff.py  state.py
src/citations/: __init__.py  book_citation.py  chicago_formatter.py  code_citation.py  formatter.py  graph_citation.py  manager.py  mixed_citation.py
src/clients/: __init__.py  audit_service.py  book_passage.py  code_analysis.py  (+7 more)
tests/: __init__.py  conftest.py  demo_wbs_pi2.py
(+312 files in other folders)
